# App3_Soler_Segu

./: App3-Soler-Segu.cabal  Main.hs  README.md
backend/: App3-Soler-Segu.cabal  CHANGELOG.md  Dockerfile  LICENSE  fly.toml  render.yaml
backend/api/API/: Server.hs  Types.hs
backend/src/: Grid.hs  Main.hs  PathFinder.hs  SearchAlgorithm.hs  Types.hs
basicapi/: Dockerfile  basicapi.cabal
basicapi/app/: Main.hs
basicapi/app/API/: Server.hs
basicapi/src/: Rules.hs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GameInstructions.tsx  GridEditor.tsx  Header.tsx  PathFinderForm.tsx  PathFinderGame.tsx  PresetGrids.tsx
frontend/src/types/: api.ts
src/: Grid.hs  Main.hs  PathFinder.hs
