cabal-version:       2.4
name:                basicapi
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     
      Grid
    , PathFinder
    , Rules
    , SearchAlgorithm
    , Types
  hs-source-dirs:      
      src
  build-depends:
      base            >=4.7 && <5,
      containers      >=0.5,
      -- (no necesitas aeson/servant aquí porque la lógica no depende de ellos)
  default-language:    Haskell2010

executable basicapi-exe
  main-is:             Main.hs
  hs-source-dirs:
      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base            >=4.7 && <5,
      servant         >=0.18,
      servant-server  >=0.18,
      aeson           >=1.4,
      wai             >=3.2,
      warp            >=3.3,
      wai-cors        >=0.2,
      text            >=1.2,
      basicapi        -- nuestra librería local con los módulos de PathFinder
  default-language:    Haskell2010
