cabal-version:       2.4
name:                basicapi
version:             0.1.0.0
build-type:          Simple

-- ------------------------------------------------------------------
-- 1) Librería con los módulos lógicos (en src/)
-- ------------------------------------------------------------------
library
  exposed-modules:
      Grid
    , PathFinder
    , Rules
    , SearchAlgorithm
    , Types
  hs-source-dirs:
      src
  build-depends:
      base            >=4.7 && <5,
      containers      >=0.5
  default-language:    Haskell2010

-- ------------------------------------------------------------------
-- 2) Ejecutable que usa Servant y nuestra librería local “basicapi”
--    El código fuente vive en app/, incluyendo API.Server y Main.
-- ------------------------------------------------------------------
executable basicapi-exe
  main-is:             Main.hs
  hs-source-dirs:
      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base            >=4.7 && <5,
      servant         >=0.18,
      servant-server  >=0.18,
      aeson           >=1.4,
      wai             >=3.2,
      warp            >=3.3,
      wai-cors        >=0.2,
      text            >=1.2,
      basicapi
  other-modules:
      API.Server
  default-language:    Haskell2010
